@@ -8037,9 +8037,9 @@ AT_CHECK([./prog], [0], [DIV1 is 33
 HUN  is 143
 HUN2 is 1855
 NUM2 is 9 left to right precedence.
-XFLD3 starts at 10
-XFLD4 starts at 20
-XFLD4 starts at 12
+XFLD3 starts at 9
+XFLD4 starts at 19
+XFLD4 starts at 11
 My Dog's name is Piper;
 Your Dog's name is Barky;
 The Dog's name is Barky ;
@@ -8141,9 +8141,9 @@ HUN2 is 1855
 01 CONSTANT has normal operator precedence.
 CON3 is 23
 CON4 is 26 vs 3.141596 & -2.189 & +12
-XFLD3 starts at 10
-XFLD4 starts at 20
-XFLD4 starts at 12
+XFLD3 starts at 9
+XFLD4 starts at 19
+XFLD4 starts at 11
 My Dog's name is Piper;
 Your Dog's name is Barky;
 The Dog's name is Barky ;
